# AliceO2

./: .clang-format  .clang-tidy  .cmake-format.py  .codecov.yml  .gitignore  .travis.yml  AliceO2Doxygen.conf  AliceO2_test.cmake  CHANGELOG.md  CMakeLists.txt  CMakeLists.txt.orig  CODEOWNERS  CTestConfig.cmake  DEBUGGING.md  Dart.sh  Jenkinsfile  README.md  annotated.html  annotated_dup.js  classes.html  dir_006ac155b3774986f9fa12ed9252f918.html  dir_006ac155b3774986f9fa12ed9252f918.js  dir_00bec16f3b227e6f7befd3dbd7e61e41.html  dir_00bec16f3b227e6f7befd3dbd7e61e41.js  dir_00f93da2d587000383105027a21cc5f6.html  dir_00f93da2d587000383105027a21cc5f6.js  dir_012f44601d7834f204d4249049adf73c.html  dir_012f44601d7834f204d4249049adf73c.js  dir_016f66a9fb645873222c1016e54f5c8e.html  dir_016f66a9fb645873222c1016e54f5c8e.js  dir_0189f3ad6abecd72f822a0c3914f12b2.html  dir_0189f3ad6abecd72f822a0c3914f12b2.js  dir_01d249f9f1ea413118b8299f8515654e.html  dir_01d249f9f1ea413118b8299f8515654e.js  dir_01d68d8da92fbef75811dc6520ae440e.html  dir_01d68d8da92fbef75811dc6520ae440e.js  dir_022348068a13a69c0e47fc289d66acb8.html  dir_022348068a13a69c0e47fc289d66acb8.js  dir_02327da50a4add2fe46b03f4277cb8e9.html  dir_02327da50a4add2fe46b03f4277cb8e9.js  (+2565 more)
Analysis/DataModel/: CMakeLists.txt
Analysis/Tasks/: CMakeLists.txt  cascadebuilder.cxx  cascadeconsumer.cxx  ccdbtest.cxx  centralityQa.cxx  centralityTable.cxx  correlations.cxx  correlationsCollection.cxx  correlationsMixed.cxx  emcalCorrectionTask.cxx  eventSelection.cxx  eventSelectionQa.cxx  hfcandidatecreator2prong.cxx  hftrackindexskimscreator.cxx  invMassAnalysis.cxx  jetfinder.cxx  lambdakzerobuilder.cxx  lambdakzeroconsumer.cxx  lambdakzerofinder.cxx  lambdakzeroproducer.cxx  multiplicityQa.cxx  multiplicityTable.cxx  pidTOF.cxx  pidTOF_split.cxx  pidTOF_tiny.cxx  pidTOFqa.cxx  pidTPC.cxx  pidTPC_split.cxx  pidTPC_tiny.cxx  qaTask.cxx  reducedEventAnalysis.cxx  run2Matcher.cxx  run3Matcher.cxx  spectra.cxx  spectraTOF.cxx  spectraTPC.cxx  tableMaker.cxx  (+18 more)
CCDB/: CMakeLists-2.txt  CMakeLists.txt  O2ProtobufGenerateCppDest.cmake  README  README.md
Common/: CMakeLists.txt  README.md
DataDistribution/: CMakeLists.txt  README.md
DataFormats/: CMakeLists.txt  README.md
Detectors/: CMakeLists.txt  README.md
Examples/: CMakeLists.txt  README.md
Framework/: CHANGELOG.md  CMakeLists.txt  README.md
GPU/: .gitignore  CMakeLists.txt  README.md
Generators/: CMakeLists.txt  Pythia6Generator.h  Pythia8Generator.cxx  Pythia8Generator.h  README.md
Steer/: CMakeLists.txt  README.md
Utilities/: CMakeLists.txt  README.md
dependencies/: CMakeLists.txt  FindAliRoot.cmake  FindAliceGridUtils.cmake  FindFairRoot.cmake  FindFastJet.cmake  FindFlukaVMC.cmake  FindGLFW.cmake  FindGeant3.cmake  FindGeant4.cmake  FindGeant4VMC.cmake  FindGeant4VMC.cmake.old  FindHepMC.cmake  FindHepMC3.cmake  FindJAliEnROOT.cmake  FindKFParticle.cmake  FindLibUV.cmake  FindMCStepLogger.cmake  FindO2GPU.cmake  FindO2GPUWayland.cmake  FindO2arrow.cmake  FindONNXRuntime.cmake  FindOpenMP.cmake  FindOpenMPMacOS.cmake  FindROOT.cmake  FindRapidJSON.cmake  FindTBB.cmake  FindVGM.cmake  FindVMC.cmake  FindVtune.cmake  FindXRootD.cmake  Findarrow.cmake  Findcub.cmake  FindlibjalienO2.cmake  Findms_gsl.cmake  Findpythia.cmake  Findpythia6.cmake  O2CUDA.cmake  O2CompileFlags.cmake  O2Dependencies.cmake  O2FindDependenciesFromAliBuild.cmake  (+3 more)
doc/: CLion.md  CMakeInstructions.md  CMakeLists.txt  CMakeMigration.md  CodeOrganization.md  DetectorSimulation.md  DoxygenInstruction.md  DoxygenInstructions.md  FairMQDevice.1.in  ManPages.md  README.md  Upgrades.md  doxyfile-with-graphs.in  doxyfile.in  o2-timeframe-file-format.1.in  o2.1.in
macro/: CMakeLists.txt  CheckClusters_mft.C  CheckClusters_mft.C_backup  CheckDigits_mft.C  CreateBCPattern.C  CreateCTPOrbitResetObject.C  CreateGRPECSObject.C  CreateGRPLHCIFObject.C  CreateGRPMagFieldObject.C  CreateSampleIRFrames.C  README_mft  SetIncludePath.C  SetIncludePath_mft.C  TestMacro.cmake  UploadDummyAlignment.C  UploadMatBudLUT.C  analyzeDigitLabels.C  analyzeHits.C  analyzeOriginHits.C  build_geometry.C  checkGeomOverlaps.C  checkTOFMatching.C  checkTOFmatching.C  compareHits.C  compareTOFClusters.C  compareTOFDigits.C  compareTopologyDistributions.C  compare_cluster.C  compare_cluster.C_backup  convertClusterToClusterHardware.C  duplicateHits.C  eventDisplay.C  getTimeStamp.C  initSimGeomAndField.C  loadExtDepLib.C  load_all_libs.C  load_all_libs_mft.C  migrateSimFiles.C  o2sim.C  putCondition.C  (+72 more)
o2qa/: CMakeLists.txt  HistogramTMessage.h  README.md  runHistogramMerger.cxx  runHistogramViewer.cxx  runMerger.cxx  runProducer.cxx  runSystemController.cxx  runViewerDevice.cxx
packaging/: CMakeLists.txt  O2Config.cmake
prodtests/: CMakeLists.txt  check_embedding_pileup.sh  check_embedding_pileup_global.sh  embedding_benchmark.sh  full_system_test.sh  full_system_test_ci_extra_tests.sh  full_system_test_pipeline.sh  produce_QEDhits.sh  pythia8.cfg  sim_challenge.sh  sim_performance_test.sh
run/: CMakeLists.txt  O2HitMerger.h  O2HitMergerRunner.cxx  O2PrimaryServerDevice.h  O2PrimaryServerDeviceRunner.cxx  O2SimDevice.h  O2SimDeviceRunner.cxx  PrimaryServerState.h  README.md  SimPublishChannelHelper.h  checkStack.cxx  dpl_eventgen.cxx  g4DetermineUnknownPdgProperties.cxx  o2-sim-client.py  o2-workflow-runner.py  o2aod_mc_to_hepmc.cxx  o2sim.cxx  o2sim_evalmat.cxx  o2sim_hepmc_publisher.cxx  o2sim_kine_publisher.cxx  o2sim_mbudget.cxx  o2sim_mctracks_proxy.cxx  o2sim_mctracks_to_aod.cxx  o2sim_parallel.cxx  o2simdefaultdetectorlist.json  o2simtopology.json  o2simtopology_template.json  runTPC.cxx  simlogcheck.sh  standalone_eventgen.cxx  startSim.sh
tests/: CMakeLists.txt  CTestCustom.cmake  O2SetupTesting.cmake  ctest-sort-tests-by-cost.py  ensure-executable-naming-convention.sh.in  loadtime.C  loadtime.cxx  test-root-macro.sh.in  testRootMacro.cxx  tests-wrapper.sh.in  tests.rootrc.in  tmp-patch-tests-environment.sh.in
version/: CMakeLists.txt  O2Version.cxx.in  O2Version.h  O2Version.h.in  RecordBuildDetails.py
(+36337 files in other folders)
