# @brief  cmake setup for the DataFormats module of AliceO2

add_subdirectory (Headers)
add_subdirectory (simulation)
add_subdirectory (TimeFrame)
add_subdirectory (Parameters)
add_subdirectory (Detectors)
add_subdirectory (Reconstruction)
add_subdirectory (common)
add_subdirectory (MemoryResources)
