# @brief  cmake setup for the DataFormats module of AliceO2

# those two below have been moved up to CMakeLists because
# they are needed by O2Device which is itself needed by CCDB.
#
# add_subdirectory (Headers)
# add_subdirectory (MemoryResources)

# * add_subdirectory (simulation)
# * add_subdirectory (TimeFrame)
# * add_subdirectory (Parameters)
# * add_subdirectory (Detectors)
# * add_subdirectory (Reconstruction)
# * add_subdirectory (common)
