# Copyright CERN and copyright holders of ALICE O2. This software is distributed
# under the terms of the GNU General Public License v3 (GPL Version 3), copied
# verbatim in the file "COPYING".
#
# See http://alice-o2.web.cern.ch/license for full licensing information.
#
# In applying this license CERN does not waive the privileges and immunities
# granted to it by virtue of its status as an Intergovernmental Organization or
# submit itself to any jurisdiction.

add_subdirectory(Ex1)
add_subdirectory(Ex2)
add_subdirectory(Ex3)
add_subdirectory(Ex4)
add_subdirectory(Ex5)
add_subdirectory(flp2epn)
add_subdirectory(flp2epn-distributed)
